fix_condizione bomba

--- a/index.html
+++ b/index.html
@@ -47,6 +47,9 @@
       <div id="grigliaDue" class="griglia hidden"></div>
       <div id="grigliaTre" class="griglia hidden"></div>
     </main>
+    <section class="risultato">
+      <div class="messaggioPunteggio"></div>
+    </section>
     <footer>
       <div class="footer container">
         <div class="dati">
