--- a/index.html
+++ b/index.html
@@ -48,15 +48,14 @@
       <div id="grigliaTre" class="griglia hidden"></div>
     </main>
     <section class="risultato">
-      <div class="messaggioPunteggio"></div>
+      <div class="messaggioPunteggio">
+        Il tuo punteggio è <span id="count"></span>
+      </div>
     </section>
     <footer>
       <div class="footer container">
         <div class="dati">
-          <h4>
-            Made with <i class="fa-solid fa-heart"></i> by
-            <a target="_blank" href="https://boolean.careers/">Boolean</a>
-          </h4>
+          <h4>Made with <i class="fa-solid fa-heart"></i> by classe 84</h4>
         </div>
       </div>
     </footer>
