add_calcolo punteggio

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     </main>
     <section class="risultato">
       <div class="messaggioPunteggio">
-        Il tuo punteggio è <span id="count"></span>
+        Il tuo punteggio è <span id="count">0</span>
       </div>
     </section>
     <footer>
