add_fine livello easy

--- a/index.html
+++ b/index.html
@@ -48,8 +48,11 @@
       <div id="grigliaTre" class="griglia hidden"></div>
     </main>
     <section class="risultato">
-      <div class="messaggioPunteggio">
-        Il tuo punteggio è <span id="count">0</span>
+      <div class="messaggioPunteggio hidden">
+        <h3 class="perso">
+          Hai perso! Il tuo punteggio è <span class="count">0</span>
+        </h3>
+        <h3 class="vinto">Hai vinto!</h3>
       </div>
     </section>
     <footer>
