--- a/bonus/index.html
+++ b/bonus/index.html
@@ -31,7 +31,13 @@
           <div class="logo"><img src="img/logoBoolean.png" /></div>
           <div class="titolo"><h1>Campo Minato</h1></div>
         </div>
-        
+        <div class="sceltaLivello">
+          <label for="livelli">Difficulty:</label>
+          <select name="livelli" id="levels">
+            <option value="e">Easy</option>
+            <option value="m">Medium</option>
+            <option value="h">Hard</option>
+          </select>
           <button value="" class="btn">Play</button>
         </div>
       </div>
