add_btn reset bonus

--- a/bonus/index.html
+++ b/bonus/index.html
@@ -39,6 +39,7 @@
             <option value="h">Hard</option>
           </select>
           <button value="" class="btn">Play</button>
+          <button value="" class="reset">Reset</button>
         </div>
       </div>
     </header>
