add_media query

--- a/bonus 2/index.html
+++ b/bonus 2/index.html
@@ -31,16 +31,21 @@
           <div class="titolo"><h1>Space Adventure</h1></div>
           <div class="logo"><img alt="logo" src="img/naveSpaziale.png" /></div>
         </div>
-        <div class="sceltaLivello">
+
+        <div class="levels">
           <h2>Difficulty:</h2>
-          <select name="livelli" id="levels">
+          <select
+            class="custom-select select-selected"
+            name="livelli"
+            id="levels"
+          >
             <option value="e">Easy</option>
             <option value="m">Medium</option>
             <option value="h">Hard</option>
           </select>
-
+        </div>
+        <div class="bottoniStartReset">
           <img class="btn" alt="start" src="img/start.png" />
-
           <img class="reset" alt="reset" src="img/reset.png" />
         </div>
       </div>
