add_animation ufo

--- a/bonus 2/index.html
+++ b/bonus 2/index.html
@@ -25,6 +25,9 @@
     <title>Space Adventure</title>
   </head>
   <body>
+    <div class="navicella">
+      <img src="img/navicella.png" alt="ufo" />
+    </div>
     <audio id="myAudio">
       <source
         src="sound/466867__mikee63__blaster-shot-single-5.ogg"
